[package]
name = "memtable-skiplist"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-utils = "0.8.21"

[dev-dependencies]
quickcheck = "1.0.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
crossbeam-skiplist = "0.1.3"
rand = "0.9.1"
pprof = { version = "0.14.0", features = [
    "criterion",
    "flamegraph",
    "prost-codec",
    "frame-pointer",
] }

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true
